--- a/app/src/main/res/layout/item_todo.xml
+++ b/app/src/main/res/layout/item_todo.xml
@@ -4,9 +4,10 @@
     android:layout_height="80dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingStart="8dp"
-    android:paddingEnd="8dp"
+    android:paddingEnd="8dp">
 
-    >
+
+
 
     <TextView
         android:id="@+id/todoTitle"
